# deep-vsmc

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py  tfp_wrapper.py
configs/: train_lorenz_awgn.yaml  train_lorenz_partial_observations.yaml
configs/icassp/: bootstrap_lorenz.yaml  bootstrap_lorenz_10x.yaml  dpf_lorenz.yaml  dpf_lorenz_partial_observations.yaml  ekpf_lorenz.yaml  encoder_lorenz.yaml  encoder_lorenz_partial_observations.yaml
dpf/: dpf_run2.py  dpf_utils.py  keras_helpers.py  learned_pf.py  prob.py  runnable.py
dpf/baselines/lorenz_encoder/: dpf_integration.py  train_encoder.py  val_encoder.py
dpf/configs/: bootstrap_lorenz.yaml  dpf_lorenz.yaml  dpf_lorenz_fixed_noise.yaml  ekpf_lorenz.yaml  encoder_lorenz.yaml
dpf/data/: lorenz.py  lorenz_data.py  utils.py
dpf/experiments/icassp/: aggregate_results.py  aggregate_results_partial_observations.py  (+3 more)
dpf/filterflow/: __init__.py  constants.py  smc.py  utils.py
dpf/models/: bootstrap.py  ekpf.py  encoder.py  presets.yaml  vsmc.py
icassp/: aggregate_results.py  aggregate_results_partial_observations.py  aggregate_results_partial_observations_kl_loglikelihood.py  bootstrap_lorenz.yaml  bootstrap_lorenz_10x.yaml  dpf_lorenz_partial_observations.yaml  ekpf_lorenz.yaml  encoder_lorenz.yaml  encoder_lorenz_partial_observations.yaml  noise_tracking_performance.py  partial_observations_tracking_performance.py
icassp/plots/: figure_elbo_partial_observations.py  figure_tracking_error_noise.py  figure_tracking_error_partial_observations.py
pyutils/styles/: darkmode.mplstyle  icassp.mplstyle
usbmd/: __init__.py  backend.py  config.py  device.py  log.py  pyproject.toml  tensor_ops.py  utils.py
vsmc/: dpf_utils.py  experiments.py  keras_helpers.py  learned_pf.py  load_model.py  ops.py  prob.py  runnable.py  sweeper.py  tf_prob.py  utils.py
vsmc/configs/: dpf_lorenz.yaml  dpf_lorenz_train.yaml  dpf_lorenz_train_awgn.yaml  train_lorenz_awgn.yaml  train_lorenz_partial_observations.yaml
vsmc/data/: lorenz.py  lorenz_data.py  utils.py
vsmc/filterflow/: base.py  smc.py  utils.py
vsmc/icassp/: aggregate_results_partial_observations.py  bootstrap_lorenz_10x.yaml  noise_tracking_performance.py  partial_observations_tracking_performance.py
vsmc/models/: __init__.py  base.py  bootstrap.py  ekpf.py  helpers.py  preset_loader.py  vsmc.py
(+51 files in other folders)
