[project]
name = "vsmc"
version = "0.1.0"
description = ""
authors = [
    { name = "Wessel van Nierop", email = "40076995+wesselvannierop@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "wandb>=0.16",
    "SimpleITK>=2.3",
    "huggingface_hub[cli]>=0.22",
    "keras>=3.4",
    "zea==0.0.2; python_version >= '3.10' and python_version < '3.13'",
    "tensorflow[and-cuda]==2.16.2",
    "tensorflow-probability==0.24.0",
    "tf_keras==2.16",
    "jax[cuda12]>=0.4",
    "pandas>=2.1"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["ALL"]
